# lucio_challenge

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
python-engine/: __init__.py  main.py  pipeline.py
rust-core/: Cargo.toml
rust-core/src/: lib.rs  lucio_challenge.code-workspace
scripts/: build.sh  generate_test_pdfs.sh
tests/: benchmark.py
