[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "lucio-server"
version = "0.1.0"
description = "High-performance RAG pipeline for PDF processing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "transformers>=4.35.0",
    "faiss-cpu>=1.7.4",
    "groq>=0.4.0",
    "PyPDF2>=3.0.0",
    "aiohttp>=3.9.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
gpu = [
    "faiss-gpu>=1.7.4",
]
ocr = [
    "surya-ocr>=0.4.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "reportlab>=4.0.0",
]

[tool.maturin]
python-source = "python-engine"
module-name = "lucio_core"
