[package]
name = "lucio_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "lucio_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
rayon = "1.8"
lopdf = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
